mType/tests/testFiles/error/error/lexerUnteminatedString.mt
int x = 10;
string msg = "unterminated string
int y = 20;